--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -24,13 +24,13 @@ h3 {
 
 <body>
 <h1>kexec-loader manual</h1>
-<p>Version: 1.2.</p>
+<p>Version: 1.3pre.</p>
 <p>&copy; 2008 Daniel Collins<br />&copy; 2008 Philip Kent</p>
 <h2>1. Compliation</h2>
 <h3>1.1. Introduction</h3>
 <p>kexec-loader is a boot loader which loads a Linux kernel, then displays a GRUB-like menu so you can select a kernel to boot
 using kexec. It is designed for systems where the BIOS does not support booting from some devices (e.g. your kernel is on a USB memory key which the BIOS does not support).</p>
-<p>If you have downloaded one of the pre-built disk images, you do not need to read the rest of this section, and you can skip to Section 2.</p>
+<p>If you have downloaded one of the pre-built disk images, you do not need to read the rest of this section, and you can skip to Section 2. A pre-made disk image is probably more suitable to the end user in most cases, as the provided image supports IDE, SATA and USB and is pre-compiled. You can obtain it from the project's webpage.</p>
 <h3>1.2. Requirements</h3>
 <p>To build kexec-loader, you require the following tools.</p>
 <ul>
@@ -59,7 +59,7 @@ using kexec. It is designed for systems where the BIOS does not support booting 
 <h2>2. Usage</h2>
 <h3>2.1. Configuration File</h3>
 <p>kexec-loader uses a GRUB-like configuration file to find what menu options it needs to show. If you have downloaded one of the pre-made disk images, a sample configuration is stored on the disk that might be able to boot a Debian system.</p>
-<p>kexec-loader will attempt to find a configuration in the following places in order:</p>
+<p>kexec-loader will attempt to find a configuration in the following places in order, unless you choose to use grub (see below):</p>
 <ul>
   <li>/dev/fd0</li>
   <li>/dev/fd1</li>
@@ -69,11 +69,12 @@ using kexec. It is designed for systems where the BIOS does not support booting 
   <li>/dev/sdd</li>
 </ul>
 <p>If you specify a device as a variable called kexec_config on the boot line (e.g. kexec_config=/dev/hda), then the named device will be put on the top of the list. Failing to load from that one, it will then go through the list.</p>
-<p>The configuration must be called kexec-loader.conf and stored in the root of the filesystem and it must contain at least one section starting "title", or else it will have no kernels to load. You can put whitespace between the directives and their variables. Empty lines and lines beginning with a hash (#) are ignored.</p>
+<p>The configuration must be called kexec-loader.conf and stored in the root of the filesystem and it must contain at least one section starting "title" OR have a grub_root to load a grub config file, or else it will have no kernels to load. You can put whitespace between the directives and their variables. Empty lines and lines beginning with a hash (#) are ignored.</p>
+<p>As of kexec-loader 1.3, reading a grub configuraiton file is supported. The entries in the grub configuration file will be placed above all other entries). To use grub, use the relevent directives.</p>
 <p>The directives are as follows.</p>
 <ul>
   <li><strong>timeout &lt;integer&gt;</strong>
-  <br />Amount of seconds to wait till the kernel marked default is loaded. If no kernel is marked as default, the first kernel in the list will be loaded.</li>
+  <br />Amount of seconds to wait till the kernel marked default is loaded. If no kernel is marked as default, the first kernel in the list will be loaded. If this is omitted, and a grub config file is loaded, it will use the timeout from there (otherwise it will not timeout).</li>
   <li><strong>title &lt;text&gt;</strong>
   <br />Title of the entry. This starts an item on the list, and all following directives will be processed as a part of this entry until the next title directive.</li>
   <li><strong>kernel &lt;filename&gt;</strong>
@@ -88,6 +89,10 @@ using kexec. It is designed for systems where the BIOS does not support booting 
   <br />Device to mount at a certain mountpoint. This is not for filesystems to load under the new kernel, just any other filesystems that may be needed to start the new kernel running (e.g. if the initrd is stored on another filesystem).</li>
   <li><strong>default</strong>
   <br />Make this kernel the default kernel to boot  if the timeout expires.</li>
+  <li><strong>grub_root [fstype:]&lt;device&gt;</strong>
+  <br />Device containing the grub menu.lst (in either /boot/grub/menu.lst or /grub/menu.lst).</li>
+  <li><strong>grub_first &lt;hdx/sdx&gt;</strong>
+  <br />Default is hdx. If hdx is specified, (hd0) will be hda, then all devices will follow as normal, with sd devices following at the end. If it's sdx, then it will reverse, (hd0) will be sda, followed by all other sd devices, then hd devices following at the end.</li>
 </ul>
 <p>Where parameters are shown in &lt;angled brackets&gt;, they are required for that directive. Ones in [square brackets] are optional. For mount and rootfs, if you do specify a fstype, it should be specified as ext2:/dev/hda1 for example.</p>
 <p>Normally kexec-loader can detect the filesystem type, it supports autodetection for the following types.</p>
