--- a/README.html
+++ b/README.html
@@ -24,7 +24,7 @@ h3 {
 
 <body>
 <h1>kexec-loader manual</h1>
-<p>Version: 1.3pre.</p>
+<p>Version: 1.3.1</p>
 <p>&copy; 2008 Daniel Collins<br />&copy; 2008 Philip Kent</p>
 <h2>1. Compliation</h2>
 <h3>1.1. Introduction</h3>
