--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -33,7 +33,7 @@ a:hover {
 <h1>kexec-loader manual</h1>
 <p>Version: 1.4.</p>
 <p>&copy; 2008 Daniel Collins<br />&copy; 2008 Philip Kent</p>
-<h2>1. Compliation</h2>
+<h2>1. Compilation</h2>
 <h3>1.1. Introduction</h3>
 <p>kexec-loader is a boot loader which loads a Linux kernel, then displays a GRUB-like menu so you can select a kernel to boot
 using kexec. It is designed for systems where the BIOS does not support booting from some devices (e.g. your kernel is on a USB memory key which the BIOS does not support).</p>
@@ -44,7 +44,7 @@ using kexec. It is designed for systems where the BIOS does not support booting 
   <li>Improved support for multiboot kernels
 	  <ul>
 	    <li>Support for multiboot cmdline</li>
-	    <li>Support for resetting the VGA adapter</li>
+	    <li>Support for resetting the VGA adaptor</li>
 	  </ul>
 	  </li>
   <li>Built in shell</li>
@@ -90,7 +90,7 @@ using kexec. It is designed for systems where the BIOS does not support booting 
 </ul>
 <p>If you specify a device as a variable called kexec_config on the boot line (e.g. kexec_config=/dev/hda), then the named device will be put on the top of the list. Failing to load from that one, it will then go through the list.</p>
 <p>The configuration must be called kexec-loader.conf and stored in the root of the filesystem and it must contain at least one section starting "title" OR have a grub_root to load a grub config file, or else it will have no kernels to load. You can put whitespace between the directives and their variables. Empty lines and lines beginning with a hash (#) are ignored.</p>
-<p>As of kexec-loader 1.3, reading a grub configuraiton file is supported. The entries in the grub configuration file will be placed below all other entries). To use grub, use the relevent directives.</p>
+<p>As of kexec-loader 1.3, reading a grub configuration file is supported. The entries in the grub configuration file will be placed below all other entries). To use grub, use the relevant directives.</p>
 <p>The directives are as follows.</p>
 <ul>
   <li><strong>timeout &lt;integer&gt;</strong>
@@ -116,7 +116,7 @@ using kexec. It is designed for systems where the BIOS does not support booting 
   <li><strong>cmdline &lt;command line options&gt;</strong>
   <br />Command line parameters to pass to the kernel, has the same effect as <code>kernel mykernel.bin foo=bar</code> in GRUB, you would put <code>foo=bar</code> here.</li>
   <li><strong>reset-vga</strong>
-  <br />Reset the VGA adapter before starting the kernel, may be useful if you get garbled or no output on bootup.</li>
+  <br />Reset the VGA adaptor before starting the kernel, may be useful if you get garbled or no output on bootup.</li>
 </ul>
 <p>Where parameters are shown in &lt;angled brackets&gt;, they are required for that directive. Ones in [square brackets] are optional. For mount and rootfs, if you do specify a fstype, it should be specified as ext2:/dev/hda1 for example.</p>
 <p>Normally kexec-loader can detect the filesystem type, it supports autodetection for the following types.</p>
@@ -135,7 +135,7 @@ using kexec. It is designed for systems where the BIOS does not support booting 
 <p>Upon asking a kernel to boot, it may take a few seconds for it to load the kernel and switch to it. After switching, your new kernel will start and the boot process will happen as it would normally.</p>
 <h3>2.3. Built in shell</h3>
 <p>kexec-loader has a built in shell. To access it press "s" on the menu screen. This shell lets you set up a kernel to boot once kexec-loader has started. Therefore it has the same directives as mentioned above, <b>except "default" and "title"</b>.</p>
-<p>There are two further directives used to control kexec-loader, rather than swt up a kernel to boot. They are:</p>
+<p>There are two further directives used to control kexec-loader, rather than set up a kernel to boot. They are:</p>
 <ul>
   <li><b>exit</b>
   <br />Leave the shell and go back to the menu.</li>
@@ -144,13 +144,13 @@ using kexec. It is designed for systems where the BIOS does not support booting 
 </ul>
 <p>Please note that this shell will be improved in subsequent releases.</p>
 <h3>2.4. Debug Console</h3>
-<p>Once kexec-loader has started all debugging messages, as well as Linux kernel messages are sent to a seperate debug console. By default the debug console is /dev/tty2, this can be changed at boot by using the Linux cmdline, for example kexec_debug=/dev/ttyS0 writes all debug messages and kernel messages to the first serial port.</p>
+<p>Once kexec-loader has started all debugging messages, as well as Linux kernel messages are sent to a separate debug console. By default the debug console is /dev/tty2, this can be changed at boot by using the Linux cmdline, for example kexec_debug=/dev/ttyS0 writes all debug messages and kernel messages to the first serial port.</p>
 <h2>3. Support</h2>
 <h3>3.1. Website</h3>
 <p>For information on kexec-loader, including current development and latest releases, please see its website at <a href="http://www.solemnwarning.net">http://www.solemnwarning.net</a>.</p>
 <h3>3.2. Mailing List</h3>
 <p>A mailing is available for kexec-loader, subscription information and archives can be found at <a href="http://www.solemnwarning.net/kexec-loader/list">http://www.solemnwarning.net/kexec-loader/list</a>.</p>
 <h3>3.3. Developer</h3>
-<p>The developer of kexec-loader, Daniel Collins (aka solemnwarning), can often be found on other discussion sites, such as the “Microsuck” forums and on freenode IRC. To contact solemnwarning, you can use the following e-mail address: <em>solemnwarning@solemnwarning.net</em>.</p>
+<p>The developer of kexec-loader, Daniel Collins (aka solemnwarning), can often be found on other discussion sites, such as the "Microsuck" forums and on freenode IRC. To contact solemnwarning, you can use the following e-mail address: <em>solemnwarning@solemnwarning.net</em>.</p>
 </body>
 </html>
