--- a/README.html
+++ b/README.html
@@ -31,18 +31,17 @@ a:hover {
 
 <body>
 <h1>kexec-loader manual</h1>
-<p>Version: 1.4.2</p>
+<p>Version: 1.4.3</p>
 <p>&copy; 2008 Daniel Collins<br />&copy; 2008 Philip Kent</p>
 <h2>1. Compilation</h2>
 <h3>1.1. Introduction</h3>
 <p>kexec-loader is a boot loader which loads a Linux kernel, then displays a GRUB-like menu so you can select a kernel to boot
 using kexec. It is designed for systems where the BIOS does not support booting from some devices (e.g. your kernel is on a USB memory key which the BIOS does not support).</p>
 <p>If you have downloaded one of the pre-built disk images, you do not need to read the rest of this section, and you can skip to Section 2. A pre-made disk image is probably more suitable to the end user in most cases, as the provided image supports IDE, SATA and USB and is pre-compiled. You can obtain it from the project's webpage.</p>
-<h3>1.2. New in kexec-loader 1.4.2</h3>
+<h3>1.2. New in kexec-loader 1.4.3</h3>
 <p>A summary of the new features in this release of kexec-loader is below. For a more detailed changelog, please see the ChangeLog file.</p>
 <ul>
-	<li>Added support for specifying multiboot modules in menu.lst</li>
-	<li>Replaced a lot of static buffers/arrays with dynamic ones</li>
+	<li>Fixed bug caused by my stupidity and lack of testing.</li>
 </ul>
 <h3>1.3. Requirements</h3>
 <p>To build kexec-loader, you require the following tools.</p>
