--- a/README.html
+++ b/README.html
@@ -43,7 +43,7 @@ using kexec. It is designed for systems where the BIOS does not support booting 
 <p>A summary of the new features in this release of kexec-loader is below. For a more detailed changelog, please see the ChangeLog file.</p>
 <ul>
 <li>Added support for loading modules into the kernel running kexec-loader</li>
-<li>Removal of the R function (to reload the configuration file</li>
+<li>Removal of the R function (to reload the configuration file)</li>
 <li>Bugfixes</li>
 </ul>
 <h3>1.3. Requirements</h3>
@@ -147,7 +147,7 @@ using kexec. It is designed for systems where the BIOS does not support booting 
 <p>Upon asking a kernel to boot, it may take a few seconds for it to load the kernel and switch to it. After switching, your new kernel will start and the boot process will happen as it would normally.</p>
 
 <h3>2.3. Built in shell</h3>
-<p>kexec-loader has a built in shell. To access it press "s" on the menu screen. This shell lets you set up a kernel to boot once kexec-loader has started. Therefore it has the same directives as mentioned above, <b>except "default" and "title"</b>.</p>
+<p>kexec-loader has a built in shell. To access it press "s" on the menu screen. This shell lets you set up a kernel to boot once kexec-loader has started. Therefore it has the same directives as mentioned above, <b>except default, title and modprobe</b>.</p>
 <p>There are two further directives used to control kexec-loader, rather than set up a kernel to boot. They are:</p>
 <ul>
   <li><b>exit</b>
