--- a/README.html
+++ b/README.html
@@ -45,6 +45,8 @@ using kexec. It is designed for systems where the BIOS does not support booting 
 <li>Added support for loading modules into the kernel running kexec-loader</li>
 <li>Removal of the R function (to reload the configuration file)</li>
 <li>Bugfixes</li>
+<li>Improved mounting/fs detection code</li>
+<li>More consistent status messages</li>
 </ul>
 <h3>1.3. Requirements</h3>
 <p>To build kexec-loader, you require the following tools.</p>
